re PR tree-optimization/33373 (ICE in vectorizable_type_demotion, at tree-vect-transform.c:4098)

PR tree-optimization/33373
        * tree-vect-analyze (vect_determine_vectorization_factor): Call
        TREE_INT_CST_LOW when comparing TYPE_SIZE_UNIT.

From-SVN: r128415